# pyfli-pkg

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/: microscopy_all_automated.ipynb
src/pyfli/: __init__.py  _logo.py
src/pyfli/scripts/: __init__.py  data_saving.py  simulatorPhysics.py  ssRLD.py  ss_helpers.py  stat_tests.py  utils_common.py
src/pyfli/scripts/analysis/: __init__.py  fit_analysis.py  load_results.py  phasor_analysis.py
src/pyfli/scripts/analytical_methods/: __init__.py  am_utils.py  laguerre_deconvolution.py  nlsf.py  phasor.py  phasor_simple.py  phasor_simple_plots.py  phasor_simple_utils.py
src/pyfli/scripts/dataCC/: IRF_process.py  __init__.py  dataCC_utils.py  norm.py  subsetdataset.py
src/pyfli/scripts/dataIO/: __init__.py  dataIO_utils.py  data_operations.py  dataoperations.py  dataops_static.py  detectorImport.py  flim_decay_cube.py  processed_DataOperation.py
src/pyfli/scripts/dataVnP/: MonoBiClassifier.py  __init__.py  colorProcess.py  dv_multiPlotter.py  mdataViz.py
src/pyfli/scripts/data_text/: __init__.py  msg_display.py
src/pyfli/scripts/irfDeconvolution/: README.md  __init__.py  demo_flim.py  detector_weights.py  flim_solver.py
src/pyfli/scripts/phasor/: __init__.py  config.py  lifetimes.py  locus.py  main.py  phasors.py  plot.py  test_phasor_flim.py
src/pyfli/scripts/roiMaker/: __init__.py  roi_maker.py  roi_style.py
src/pyfli/scripts/simulator/: __init__.py  batch_sim.py  calibration_engine.py  distributions.py  fliPhysicsModel.py  gatedSim.py  main_factory.py  noise_models.py  simImageGen.py  sim_helper.py  sim_image_generator.py  sim_stat_test.py  simulator_engine.py  tcspcSim.py
src/pyfli/scripts/singleshot/: singleshot.py
src/pyfli/scripts/solver/: __init__.py  base_fitter.py  base_static.py  binned_fliFitter.py  comparison.py  flicpuFitter.py  fligpuFitter.py  forward_model.py  globalFitter.py  mleFitter.py  shared_metrics.py  solver_utils.py
src/pyfli/spAnalysis/: __init__.py  base_reconstructor.py  basis.py  main.py  solvers.py  spad_solvers.py
src/pyfli/spAnalysis/simulator/: __init__.py  measurement_sim.py  pattern_gen.py  reconstructor.py
tests/: conftest.py  test_distributions.py  test_gpu_solver.py  test_laguerre.py  test_noise_models.py  test_package.py  test_phasor.py  test_phasor_toplevel.py  test_solver.py
