[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfli"
version = "0.1.1"
description = '''
Platform for unified Fluorescecne Lifetime Imaging data processing using 
Analytical method as well as deep learning based methods
'''
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Vikas Pandey"}
]
dependencies = [
    "h5py>=3.15.1",
    "ipykernel>=7.2.0",
    "sdtfile>=2026.2.8",
    "tensorflow>=2.20.0",
    "tifffile>=2026.3.3",
    "torch>=2.0.0",
    "joblib>=1.3.0",
    "scikit-image>=0.24.0",
    "imagecodecs",
    "opencv-python>=4.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyfli*"]
exclude = ["notebooks*", "config*", "data*"]