[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfli-lib"
version = "0.1.16"
description = "Unified Fluorescence Lifetime Imaging (FLI) data processing platform using analytical and deep learning methods."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "CC BY-NC-ND 4.0"}
authors = [
    {name = "Vikas Pandey"}
]
keywords = [
    "fluorescence", "lifetime", "FLIM", "FLI", "TCSPC", "phasor",
    "microscopy", "bioimaging", "ICCD", "SPAD", "laguerre", "deconvolution"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
# Core dependencies for the analytical methods
dependencies = [
    "h5py>=3.10.0",
    "sdtfile>=2025.0.0",
    "tifffile>=2025.0.0",
    "imagecodecs",
    "joblib>=1.3.0",
    "scikit-image>=0.22.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "scipy",
    "tqdm",
    "seaborn",
    "pillow",
    "tabulate>=0.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "PySide6>=6.4.0"
]


[project.optional-dependencies]
gpu = [
    "tensorflow>=2.15.0",
]
dev = [
    "pytest",
    "black",
    "ipykernel>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyfli*"]
exclude = ["notebooks*", "config*", "data*"]

[project.urls]
Homepage = "https://github.com/vkp217/pyfli-pkg"
Repository = "https://github.com/vkp217/pyfli-pkg.git"
Issues = "https://github.com/vkp217/pyfli-pkg/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
]
